# fastapi-postgres-boilerplate

./: .env-example  .env.example  .gitignore  README.md  backend.dockerfile  celeryworker.dockerfile  docker-compose.dev.yml  docker-compose.yml  rocketryscheduler.dockerfile  start-server.sh
app/: .flake8  README.md  pyproject.toml  worker-start.sh
app/alembic/: env.py
app/alembic/versions/: 290c4039b962_.py  358d3928a3de_.py  6b05f5028e16_.py  92fab1095a4d_.py  afa5805eb617_.py
app/app/: exceptions.py  main.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/celery/: celeryworker_pre_start.py  worker.py
app/app/core/: celery_app.py  config.py  security.py
app/app/crud/: __init__.py  base.py  crud_request_log.py  crud_user.py
app/app/db/: __init__.py  base_class.py  init_db.py  session.py
app/app/log/: log.py
app/app/models/: __init__.py  request_log.py  user.py
app/app/schemas/: __init__.py  request_log.py  token.py  user.py
app/app/utils/: __init__.py  message_codes.py  response.py  schedule.py  user.py  utils.py
app/cache/: __init__.py  cache-doc.md  cache.py  client.py  enums.py  key_gen.py  redis.py  util.py
app/tests/: README.md  conftest.py
app/tests/api/: test_reset_password.py
app/tests/test_routes/: test_user_model.py  test_users.py
backend/app/: README.md  pyproject.toml  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: eb77c1422746_.py
backend/app/app/api/: deps.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/db/: base.py  base_class.py
scripts/: format.sh
(+6 files in other folders)
