[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamran Abdi <kamranabdicse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.1"
SQLAlchemy = "^1.4.45"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
